<?xml version="1.0"?>

<!--?xml version="1.0" encoding="UTF-8"?-->

<resources>

    <string name="user_name_or_email">Username o email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="log_in_with_facebook">LOGIN WITH FACEBOOK</string>
    <string name="login_with_twitter">LOGIN WITH TWITTER</string>
    <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>
    <string name="login">LOG IN</string>
    <string name="new_user">"New user ? "</string>
    <string name="Sign_up">Sign up</string>
    <string name="text_color"></string>
</resources>