<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="0.6">

            <ImageView

                android:layout_width="360dp"
                android:layout_height="156dp"
                android:layout_marginStart="@dimen/login_marginTop"
                android:layout_marginTop="@dimen/login_marginTop"
                android:layout_marginEnd="@dimen/login_marginTop"
                android:layout_marginBottom="@dimen/login_marginTop"
                android:src="@drawable/android" />

        </RelativeLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/login_horizontalMargin"
                android:layout_marginRight="@dimen/login_horizontalMargin">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/user_name_or_email">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <!---->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite"
                    android:layout_marginTop="@dimen/login_marginTop">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_marginTop="@dimen/login_marginTop"
                    android:theme="@style/RaiseButtonDark"
                    android:onClick="login"
                    android:textColor="@color/textView_textColor"
                    >

                </Button>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_with_facebook"
                    android:layout_marginTop="@dimen/login_marginTop"
                    android:theme="@style/RaiseButtonDark"
                    android:onClick="login"
                    android:textColor="@color/textView_textColor"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_with_twitter"
                    android:layout_marginTop="@dimen/login_marginTop"
                    android:theme="@style/RaiseButtonDark"
                    android:onClick="login"
                    android:textColor="@color/textView_textColor"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/no_tienes_cuenta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_user"
                        android:textColor="@color/textView_textColor"
                        android:textSize="@dimen/textView_textSize" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Sign_up"
                        android:textColor="@color/textView_textColor"
                        android:textStyle="bold"
                        android:layout_toRightOf="@+id/no_tienes_cuenta"
                        android:textSize="@dimen/textView_textSize"
                        android:onClick="goCreateAccount"/>
                </RelativeLayout>




            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>